# eeenc

./: CMakeLists.txt  README.md  t.txt
src/: chunks.hpp  chunks_avx2.cpp  main.cpp
src/mtap/: meta_helpers.hpp  mtap.hpp
